--- a/galerie/templates/base.html
+++ b/galerie/templates/base.html
@@ -10,7 +10,7 @@
     <!-- STYLING CSS LINKED HERE -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
-    <title> Photo-Synthetic</title>
+    <title>CRIMMZ-GALERIE</title>
     {% block styles%} {% bootstrap_css %} {% endblock %}
 </head>
 
