--- a/galerie/templates/category.html
+++ b/galerie/templates/category.html
@@ -11,7 +11,7 @@
     {% load static %}
 
     <!-- Html Title -->
-    <title>Photo-Synthetic</title>
+    <title>CRIMMZ-GALERIE</title>
 
     <!-- Boootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
