--- a/galerie/templates/categoryheader.html
+++ b/galerie/templates/categoryheader.html
@@ -31,7 +31,7 @@
                             </form>
 
                             <div class="headfont">
-                                <h1>Photo-Synthetic</h1>
+                                <h1>CRIMMZ-GALERIE</h1>
                             </div>
                             <div class="headsub">
                                 <h3> Captuted By Category!</h3>
