--- a/galerie/templates/categoryheader.html
+++ b/galerie/templates/categoryheader.html
@@ -34,8 +34,7 @@
                                 <h1>CRIMMZ-GALERIE</h1>
                             </div>
                             <div class="headsub">
-                                <h3> Captuted By Category!</h3>
-                                <h4>Capture With No Limits!</h4>
+                
                             </div>
                         </div>
                     </div>
@@ -44,4 +43,4 @@
         </header>
     </div>
 </div>
-</body>
+</body>`
