--- a/galerie/templates/home.html
+++ b/galerie/templates/home.html
@@ -56,7 +56,7 @@
 
     <div categ>
         <p class="categr" style="font-size:10px; text-align: center;">
-            <strong>Categories include;</strong> City, Love, Floral, Relistic, Unrealistic & Portait!</p>
+            <strong>Categories include;</strong> City, Love and Floral,</p>
     </div>
 
     <!--END OF IMAGE SLIDER -->
