--- a/galerie/templates/home.html
+++ b/galerie/templates/home.html
@@ -1,3 +1,4 @@
+
 {% load bootstrap3 %} {% load static %}
 
 <body>
@@ -10,7 +11,7 @@
             <!-- FIRST IMAGE ON CAROUSEL -->
             <div class="container">
                 <div class="item active">
-                    <img src="{% static 'images/pic1.jpg'%}" style="width: 130%; margin-left: -15%; height: 100%;" alt="">
+                    <!-- <img src="{% static 'images/pic1.jpg'%}" style="width: 130%; margin-left: -15%; height: 100%;" alt=""> -->
                 </div>
 
                 <div class="carousel-caption">
