--- a/galerie/templates/home.html
+++ b/galerie/templates/home.html
@@ -1,5 +1,6 @@
-
+{% extends 'base.html' %}
 {% load bootstrap3 %} {% load static %}
+{% block content %}
 
 <body>
     <!-- IMAGE SLIDER -->
@@ -57,7 +58,7 @@
 
     <div categ>
         <p class="categr" style="font-size:10px; text-align: center;">
-            <strong>Categories include;</strong> City, Love and Floral,</p>
+            <strong>Categories include;</strong> City, suits and kicks,</p>
     </div>
 
     <!--END OF IMAGE SLIDER -->
@@ -68,24 +69,27 @@
                 <!-- IMAGES DISPLAYED HERE -->
                 <div class="container">
                     <div class="index">
-                        {% if all_images %} {% for image in all_images %}
+                        
+                        {% for image in images %}
 
                         <div class="animated woble">
 
 
                             <p class="modalbtn">
                                 <a href="{{ image.image.url }}" data-lightbox="gallery">View Full Image</p>
-
+<!-- 
                             <img src="{{ image.image.url }}" class="img-responsive" style="box-shadow: 0px 0px 2px 2px rgba(94, 91, 91, 0.12);">
-                            </a>
+                            </a> -->
+                            <img src="{{image.image.url}}">
+
 
                         </div>
 
-                        {% endfor %} {% else%}
-                        <h3>You have no images</h3>
+                        {% endfor %} 
+                      
                     </div>
                 </div>
-                {% endif %}
+           
 
             </div>
 
@@ -94,3 +98,4 @@
     </div>
 </body>
 {% block styles%} {% bootstrap_css %} {% endblock %}
+{% endblock %}
