--- a/galerie/templates/categoryheader.html
+++ b/galerie/templates/categoryheader.html
@@ -32,6 +32,7 @@
 
                             <div class="headfont">
                                 <h1>CRIMMZ-GALERIE</h1>
+                                <h2>Best pics in town</h2>>
                             </div>
                             <div class="headsub">
                 
