--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,4 @@
 
-/* ########################################################################################################################################################### */
                                                                                 /* IMAGE DISPLAY STYLER */
 
                                                                                     .carousel-inner{
@@ -24,7 +23,7 @@
 
                                                                                 /* END OF IMAGE DISPLAY STYLER */
 
-/* ########################################################################################################################################################### */
+/* */
                                                                                 /* BUTTONS USED */
                                                                                     .buttonsearch{
                                                                                     margin-left: -20%;
@@ -61,7 +60,7 @@
 
                                                                                 /* END OF BUTTON DISPLAY */
 
-/* ########################################################################################################################################################### */
+/*  */
                                                                                 /* VIEW DETAIL BUTTON */
 
                                                                                     .modalbtn{
@@ -136,7 +135,7 @@
 
                                                                                                         /* END OF VIEW DETAIL BUTTON */
 
-/* ########################################################################################################################################################### */
+/*  */
                                                                             /* MEDIA QUERIES */
                                                                                 @media (max-width: 1112px) {
                                                                                     .index {
