--- a/galerie/templates/home.html
+++ b/galerie/templates/home.html
@@ -3,19 +3,19 @@
 {% block content %}
 
 <div class="body">
-                            <div class="headfont text-center crimmz" style="font-size: 500px;  padding: 5%; margin-bottom: -12%">
-                                <h1 style="font-size: 50px">CRIMMZ-GALERIE</h1>
-                                <h2 style="font-size: 50px">Best pics in town</h2>
-                            </div>
+    <div class="headfont text-center crimmz" style="font-size: 500px;  padding: 0%; margin-bottom: -12%">
+    <h1 style="font-size: 50px">CRIMMZ-GALERIE</h1>
+    <h2 style="font-size: 50px">Best pics in town</h2>
+    </div>
 
     <!-- IMAGE SLIDER -->
 
-    <div id="myCarousel" class="carousel slide" dataride="carousel">
+        <div id="myCarousel" class="carousel slide" dataride="carousel">
 
-        <div class="carousel-inner" role="listbox">
+            <div class="carousel-inner" role="listbox">
 
             <!-- FIRST IMAGE ON CAROUSEL -->
-            <div class="container">
+                <div class="container">
                 <div class="item active">
                     <!-- <img src="{% static 'images/pic1.jpg'%}" style="width: 130%; margin-left: -15%; height: 100%;" alt=""> -->
                 </div>
@@ -68,40 +68,49 @@
     </div>
 
     <!--END OF IMAGE SLIDER -->
-    <div class="container text-center">
+    <div class="container-fluid" style="background-color:maroon" ;>
+    <!-- displaying images -->
+    <div class="row">
+        {% for post in images %}
 
-        <div class="row">
-            <div class="col-sm-4">
-                <!-- IMAGES DISPLAYED HERE -->
-                <div class="container">
-                    <div class="index">
-                        
-                        {% for image in images %}
+        <div class="col-md-3">
+            <!-- modal button -->
+            <button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal{{post.id}}">
+                <img src="{{post.image.url }}" alt="" width="300" height="300">
+                <p>{{ post.image_name }}</p>
+            </button>
+            <br>
 
-                        <div class="animated woble">
-
-
-                            <p class="modalbtn">
-                                <a href="{{ image.image.url }}" data-lightbox="gallery">View Full Image</p>
-<!-- 
-                            <img src="{{ image.image.url }}" class="img-responsive" style="box-shadow: 0px 0px 2px 2px rgba(94, 91, 91, 0.12);">
-                            </a> -->
-                            <img src="{{image.image.url}}">
-
-
-                        </div>
-
-                        {% endfor %} 
-                      
-                    </div>
-                </div>
-           
-
-            </div>
-
+            <!-- modal -->
         </div>
 
+        <!-- modal content -->
+    <div class="modal" id="myModal{{post.id}}" role="dialog">
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <img src="{{post.image.url }}" alt="" width="500" height="500">
+                <h4 class="modal-title">{{ post.image_description }}</h4>
+            </div>
+
+            <div class="modal-body">
+                {% for category in post.image_category.all %}
+                <p class="xx" style="font-family: 'Srisakdi', cursive;">Category: {{ category.name }}</p>
+                <p>Location: {{ post.image_location }}</p>
+                {% endfor %}
+            </div>
+
+</div>
+</div>
+</div>
+
+        {% endfor %}
     </div>
 </div>
+
+
+
 {% block styles%} {% bootstrap_css %} {% endblock %}
 {% endblock %}
